--- a/totalhr.web/Views/Task/Index.cshtml
+++ b/totalhr.web/Views/Task/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Task Scheduler Home";
 }
 
 <h2>Index</h2>
@@ -8,5 +8,5 @@
     @Html.ActionLink("Add","Record")
 </div>
 <div>
-    @Html.ActionLink("Search / Edit Recorded Time", "Search")
+    @Html.ActionLink("Search / Edit Recorded Tasks", "Search")
 </div>
