--- a/totalhr.web/Views/Task/Search.cshtml
+++ b/totalhr.web/Views/Task/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@model totalhr.web.ViewModels.TaskSchedulerSearchVm
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Search Tasks";
 }
 
 <h2>Search Tasks</h2>
