--- a/totalhr.web/Views/TimeRecording/Details.cshtml
+++ b/totalhr.web/Views/TimeRecording/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model totalhr.web.Areas.TimeRecording.ViewModels.TimeRecordingDetailsVM
+﻿@model totalhr.web.ViewModels.TimeRecordingDetailsVM
 
 @{
     ViewBag.Title = "Details";
