--- a/totalhr.web/Views/TimeRecording/Search.cshtml
+++ b/totalhr.web/Views/TimeRecording/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model totalhr.web.Areas.TimeRecording.ViewModels.SearchVM
+﻿@model totalhr.web.ViewModels.SearchVM
 
 @{
     ViewBag.Title = "Search";
