--- a/totalhr.web/Views/TimeRecording/RecordTime.cshtml
+++ b/totalhr.web/Views/TimeRecording/RecordTime.cshtml
@@ -1,4 +1,4 @@
-﻿@model totalhr.web.Areas.TimeRecording.ViewModels.TimeRecordingVM
+﻿@model totalhr.web.ViewModels.TimeRecordingVM
 
 @{
     ViewBag.Title = "Record Time";
@@ -6,8 +6,8 @@
 
 <h2>RecordTime</h2>
 @{
-  //  var culture = System.Globalization.CultureInfo.CurrentUICulture;
-//var defaultStartDate = (Model.StartTime > DateTime.MinValue) ? Model.StartTime.ToString(culture) : DateTime.Now.ToString(culture);
+    //  var culture = System.Globalization.CultureInfo.CurrentUICulture;
+    //var defaultStartDate = (Model.StartTime > DateTime.MinValue) ? Model.StartTime.ToString(culture) : DateTime.Now.ToString(culture);
 }
 @using (Html.BeginForm())
 {
@@ -19,18 +19,18 @@
         <fieldset>
             <legend>TimeRecordingViewModel</legend>
             @Html.HiddenFor(model => model.Id)
+            @Html.HiddenFor(model => model.TypeId)
+            @Html.HiddenFor(model => model.TaskRef)
+            @Html.HiddenFor(model => model.UserId)
 
-            
-                @Html.HiddenFor(model => model.UserId)
-           
             <div class="editor-label">
                 @Html.LabelFor(model => model.StartTime)
             </div>
             <div class="editor-field">
                 @*@Html.EditorFor(model => model.StartTime, new { @class = "dp" })*@
-                @Html.TextBoxFor(x => x.StartTime, "" , new { @class = "datetype", onclick = "javascript:NewCal('StartTime','ddmmyyyy',true,24)" })
+                @Html.TextBoxFor(x => x.StartTime, "", new { @class = "datetype", onclick = "javascript:NewCal('StartTime','ddmmyyyy',true,24)" })
 
-                
+
                 @Html.ValidationMessageFor(model => model.StartTime)
             </div>
 
@@ -41,7 +41,7 @@
                 @*@Html.EditorFor(model => model.EndTime)*@
                 @Html.TextBoxFor(x => x.EndTime, "", new { @class = "datetype", onclick = "javascript:NewCal('EndTime','ddmmyyyy',true,24)" })
                 @Html.ValidationMessageFor(model => model.EndTime)
-                
+
             </div>
 
             <p>
@@ -50,10 +50,25 @@
         </fieldset>
 
 
-        <div>
-            @Html.ActionLink("Back to Time Recording Home", "Index")
+        if (Model.TaskRef != null)
+        {
+            <div>
+                @Html.ActionLink("Back to Task Details", "Details", "Task", new { id = Model.TaskRef }, null)
+            </div>
+        }
+        else
+        {
+            <div>
+                @if (Model.Id > 0)
+                {
+                    @Html.ActionLink("Back to Details", "Details", new { id = Model.Id })
 
-        </div>
+                }
+                @Html.ActionLink("Back to Time Recording Home", "Index")
+            </div>
+
+        }
+
 
         @*@section Scripts{
             @Scripts.Render("~/bundles/jqueryval")
@@ -64,13 +79,8 @@
     {
         <div class="error-message">
             @Html.DisplayFor(model => model.ErrorMessage)
+            @Html.ActionLink("Back to Time Recording Home", "Index")
         </div>
-    }
-    if (Model.Id > 0)
-    {
-        <p>
-            @Html.ActionLink("Back to Details", "Details", new { id = Model.Id })
-        </p>
     }
 }
 
