--- a/totalhr.web/Content/css/style.css
+++ b/totalhr.web/Content/css/style.css
@@ -3865,3 +3865,26 @@ jQuery UI Datepicker(new in v1.2.2)
 #ipopup {
     width:100%;height:600px;border:none;
 }
+
+/*----------------------- JQ validation stuff -------------------------*/
+.field-validation-error {
+    color: #f00;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+.input-validation-error {
+    border: 1px solid #f00;
+    background-color: #fee;
+}
+
+.validation-summary-errors {
+    font-weight: bold;
+    color: #f00;
+}
+
+.validation-summary-valid {
+    display: none;
+}
