--- a/totalhr.web/Views/Shared/_Layout.cshtml
+++ b/totalhr.web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
 
    <link href="/Content/assets/fancybox/source/jquery.fancybox.css" rel="stylesheet" />
    <link rel="stylesheet" type="text/css" href="/Content/assets/uniform/css/uniform.default.css" />
+   <link rel="stylesheet" type="text/css" href="/Content/assets/jquery-ui/jquery-ui-1.10.1.custom.min.css" />
 
     @RenderSection("extrastyles", required: false)
 </head>
@@ -109,6 +110,7 @@
    <!-- BEGIN JAVASCRIPTS -->    
    <!-- Load javascripts at bottom, this will reduce page load time -->
    <script src="/Scripts/Site/js/jquery-1.8.3.min.js"></script>
+   <script src="/Scripts/Site/assets/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
    <script src="/Scripts/Site/assets/bootstrap/js/bootstrap.min.js"></script>
    <script src="/Scripts/Site/js/jquery.blockui.js"></script>
    <!-- ie8 fixes -->
@@ -119,10 +121,12 @@
    <script type="text/javascript" src="/Scripts/Site/assets/chosen-bootstrap/chosen/chosen.jquery.min.js"></script>
    <script type="text/javascript" src="/Scripts/Site/assets/uniform/jquery.uniform.min.js"></script>
    <script src="/Scripts/Site/js/scripts.js"></script>
+    <script src="/Scripts/Site/js/ui-jqueryui.js"></script>
    <script>
        jQuery(document).ready(function () {
            // initiate layout and plugins
            App.init();
+           UIJQueryUI.init();
        });
    </script>
     
