--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -90,7 +90,7 @@
         <ul class="sub">
             <li><a class="" href="/Company/Users/"> @Account.V_Users</a></li>
             <li><a class="" href="/Company/Departments/"> @Account.V_Departments</a></li>
-            <li><a class="" href="/Company/Structure/"> @Account.V_Structure</a></li>
+            <li><a class="" href="javascript:;" onclick="OpenPopup('/Company/Structure/', 1040, 640);"> @Account.V_Structure</a></li>
             <li><a class="" href="/Company/Gallery/"> @Account.V_Image_Gallery</a></li>
         </ul>
      </li>    
