work for company modules

--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -88,10 +88,10 @@
             <span class="arrow"></span>
         </a>
         <ul class="sub">
-            <li><a class="" href="/Company/Users/"> @Account.V_Users</a></li>
+            <li><a class="" href="/Company/EmployeeDirectory/"> @Common.V_Company_Employees</a></li>
             <li><a class="" href="/Company/Departments/"> @Account.V_Departments</a></li>
-            <li><a class="" href="javascript:;" onclick="OpenPopup('/Company/Structure/', 1040, 640);"> @Account.V_Structure</a></li>
-            <li><a class="" href="/Company/Gallery/"> @Account.V_Image_Gallery</a></li>
+            <li><a class="" href="/Company/Structure/"> @Common.V_Organization_Chart</a></li>
+            <li><a class="" href="/Gallery/"> @Account.V_Image_Gallery</a></li>
         </ul>
      </li>    
   
