--- a/totalhr.web/Views/Gallery/Index.cshtml
+++ b/totalhr.web/Views/Gallery/Index.cshtml
@@ -1,5 +1,97 @@
-﻿@{
-    ViewBag.Title = "Index";
+﻿@using totalhr.Resources;
+@using totalhr.web.Areas.Admin.Helpers;
+@using totalhr.web.Areas.Admin.Models;
+
+
+@model IEnumerable<totalhr.data.EF.GalleryAlbum>
+
+@{
+    ViewBag.Title = Gallery.V_Gallery;
+    
+    var breadCrumbItems = new List<BreadCrumbItem>
+    {
+        new BreadCrumbItem{Url = "/Company/", Text = Common.V_Company, Title= Common.V_Company},
+        new BreadCrumbItem{Url = "", Text = Gallery.V_Gallery, Title= Gallery.V_Gallery}
+    };
+
+    var bNoResult = (Model == null || !Model.Any());
 }
 
-<h2>Index</h2>
+@section pagetitle{
+   @Gallery.V_Gallery
+}
+
+@section breadcrumb{
+    @Html.Raw(GenericHelper.MakeBreadCrumb(breadCrumbItems))
+}
+
+
+
+<div class="row-fluid">
+    <div class="widget">
+        <div class="widget-title">
+            <h4><i class="icon-reorder"></i>@Gallery.V_Gallery_Albums</h4>
+            <span class="tools">
+                <a href="javascript:;" class="icon-chevron-down"></a>
+            </span>
+        </div>
+        <div class="widget-body">
+           @if (!bNoResult)
+           {
+               <table class="table table-striped table-bordered" id="sample_1">
+                   <thead>
+                       <tr>
+                           <th>@Gallery.V_Album_Name</th> 
+                           <th>@Gallery.V_Description</th>
+                           <th>@Gallery.V_Created_By</th>
+                           <th>@Gallery.V_Created_On</th>
+                           <th>@Gallery.V_No_Photo</th>
+                           <th>@Gallery.V_View</th>
+                       </tr>
+                   </thead>
+                   <tbody>
+                       @foreach (var album in Model)
+                       {
+                           <tr class="odd gradeX">                       
+                               <td>
+                                   @album.Name
+                               </td>
+                               <td>
+                                   @album.Description
+                               </td>
+                               <td>
+                                   @(album.User.firstname + " " + album.User.surname) 
+                               </td>
+                               <td>
+                                   @album.Created
+                               </td>
+                               <td>
+                                   @album.NoPhotos
+                               </td>
+                               <td>
+                                   <button class="btn" onclick="javascript:NavigateTo('/Gallery/ViewAlbumPhotos/@album.Id');">
+                                       <i class="icon-eye-open"></i>
+                                       @Gallery.V_View
+                                   </button>
+                               </td>
+                           </tr>
+                       }
+                   </tbody>
+               </table>
+           }
+           else
+           {
+               <div class="alert alert-error">
+                    @Gallery.V_Error_No_Album_Found
+               </div>
+           }
+            
+        </div>
+    </div>
+</div>
+
+<div class="row-fluid">
+    <button type="submit" class="btn btn-warning" onclick="NavigateTo('/Gallery/CreateAlbum/');">
+        <i class="icon-plus icon-white"></i> @Gallery.V_Create_Album
+    </button>
+</div>
