--- a/totalhr.web/areas/Admin/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/areas/Admin/Views/Shared/_SideBarMenu.cshtml
@@ -124,8 +124,8 @@
             <span class="arrow"></span>
         </a>
         <ul class="sub">
-            <li><a class="" href="maps_google.html"> Option 1</a></li>
-            <li><a class="" href="maps_vector.html"> Option 2</a></li>
+            <li><a class="" href="/Admin/TimeRecording/RecordTime">Record Time</a></li>
+            <li><a class="" href="/Admin/TimeRecording/Search">Search Time Recording</a></li>
         </ul>
     </li> 
 
