--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -29,7 +29,7 @@
         </a>
     </li>  
     <li>
-        <a class="" href="/Account/Profiles">
+        <a class="" href="/Account/Permissions/">
             <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_My_Profiles
         </a>
     </li>   
