--- a/totalhr.web/areas/Admin/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/areas/Admin/Views/Shared/_SideBarMenu.cshtml
@@ -122,7 +122,11 @@
             </li>
         </ul>
     </li>    
-   
+    <li>
+        <a class="" href="/Admin/Reporting/">
+            <span class="icon-box"><i class="icon-dashboard"></i></span> @AdminGeneric.V_Reports
+        </a>
+    </li>
     <li class="has-sub">
         <a href="javascript:;" class="">
             <span class="icon-box"><i class="icon-map-marker"></i></span> @AdminGeneric.V_Time_Recording
