--- a/totalhr.web/Views/Absence/Index.cshtml
+++ b/totalhr.web/Views/Absence/Index.cshtml
@@ -25,6 +25,58 @@
     @Html.Raw(AH.GenericHelper.MakeBreadCrumb(breadCrumbItems))
 }
 
+<div class="row-fluid">
+    <div class="span4">
+        <div class="widget">
+            <div class="widget-title">
+                <h4><i class="icon-reorder"></i>@Absence.V_Absence_Year</h4>
+                <span class="tools">
+                    <a href="javascript:;" class="icon-chevron-down"></a>
+                </span>
+            </div>
+            <div class="widget-body"> 
+                <!-- populate from admin -->
+                <p class="alert alert-info"><strong>Start:</strong> 01/04/@DateTime.Now.Year</p>
+                <p class="alert alert-info"><strong>End:</strong> 31/03/@DateTime.Now.AddYears(1)</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="span4">
+        <div class="widget">
+            <div class="widget-title">
+                <h4><i class="icon-reorder"></i>@Absence.V_Holiday_Summary</h4>
+                <span class="tools">
+                    <a href="javascript:;" class="icon-chevron-down"></a>
+                </span>
+            </div>
+            <div class="widget-body"> 
+                <!-- automatic populate from user records -->
+                <p class="alert alert-success"><strong>Yearly Entitlement:</strong> 25</p>
+                <p class="alert alert-success"><strong>Carried From Previous Year:</strong> 3</p>
+                <p class="alert alert-success"><strong>Yearly Total:</strong> 28</p>
+                <p class="alert alert-success"><strong>Total Taken (for Year):</strong> 18</p>
+                <p class="alert alert-success"><strong>Remaining:</strong>  10</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="span4">
+        <div class="widget">
+            <div class="widget-title">
+                <h4><i class="icon-reorder"></i>@Absence.V_Other_Absences</h4>
+                <span class="tools">
+                    <a href="javascript:;" class="icon-chevron-down"></a>
+                </span>
+            </div>
+            <div class="widget-body"> 
+                <p class="alert alert-warning"><strong>Sicknesses:</strong> 3 days</p>
+                <p class="alert alert-warning"><strong>Birthday:</strong> 1 day</p>
+                <p class="alert alert-warning"><strong>Total for Year:</strong> 4 days</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="row-fluid">
     <div class="widget">
@@ -38,7 +90,7 @@
 
             @if (true)//absences != null && absences.Count > 0)
             {
-            <table class="table table-striped table-bordered" id="sample_1">
+            <table class="table table-striped table-bordered table-advance table-hover" id="sample_1">
                 <thead>
                     <tr>
                        <th>@Absence.V_Absence_Type</th> 
